Added checked safety